--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet" crossorigin="anonymous">
   <style>
     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background-color: #0f172a;
-      color: #f8fafc;
+      font-family: 'Inter', -apple-system, sans-serif;
+      -webkit-font-smoothing: antialiased;
     }
-    /* 自定义 Markdown 样式，确保导出图片美观 */
-    .md-content h1 { font-size: 1.875rem; font-weight: 800; margin-top: 1.5rem; margin-bottom: 1rem; }
-    .md-content h2 { font-size: 1.5rem; font-weight: 700; margin-top: 1.25rem; margin-bottom: 0.75rem; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 0.25rem; }
-    .md-content h3 { font-size: 1.25rem; font-weight: 600; margin-top: 1rem; margin-bottom: 0.5rem; }
-    .md-content p { margin-bottom: 1rem; line-height: 1.625; }
-    .md-content ul, .md-content ol { margin-bottom: 1rem; padding-left: 1.5rem; }
-    .md-content ul { list-style-type: disc; }
-    .md-content ol { list-style-type: decimal; }
-    .md-content li { margin-bottom: 0.25rem; }
-    .md-content blockquote { border-left: 4px solid #3b82f6; padding-left: 1rem; font-style: italic; opacity: 0.8; margin: 1rem 0; }
-    .md-content code { font-family: 'Fira Code', monospace; background: rgba(0,0,0,0.2); padding: 0.2rem 0.4rem; border-radius: 0.25rem; font-size: 0.875em; }
-    .md-content pre { background: rgba(0,0,0,0.3); padding: 1rem; border-radius: 0.5rem; overflow-x: auto; margin: 1rem 0; }
-    .md-content pre code { background: none; padding: 0; }
-    .md-content table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    .md-content th, .md-content td { border: 1px solid rgba(255,255,255,0.1); padding: 0.5rem; text-align: left; }
-    .md-content th { background: rgba(255,255,255,0.05); }
-    .md-content hr { border: 0; border-top: 1px solid rgba(255,255,255,0.1); margin: 1.5rem 0; }
+    .md-content {
+      word-break: break-word;
+    }
+    .md-content p { margin-bottom: 1.25em; line-height: 1.6; }
+    .md-content h1, .md-content h2, .md-content h3 { font-weight: 900; margin-top: 1.5em; margin-bottom: 0.5em; line-height: 1.2; }
+    .md-content h1 { font-size: 1.5em; }
+    .md-content h2 { font-size: 1.25em; }
+    .md-content ul, .md-content ol { margin-bottom: 1.25em; padding-left: 1.25em; }
+    .md-content li { margin-bottom: 0.5em; }
+    .md-content blockquote { border-left: 3px solid currentColor; padding-left: 1em; opacity: 0.6; margin: 1.5em 0; }
+    .md-content code { font-family: 'Fira Code', monospace; font-size: 0.85em; background: rgba(0,0,0,0.05); padding: 0.15em 0.3em; border-radius: 4px; }
+    .md-content pre { background: rgba(0,0,0,0.05); padding: 1em; border-radius: 12px; margin: 1.5em 0; overflow-x: auto; }
+    .md-content pre code { background: none; padding: 0; font-size: 0.8em; }
+    .md-content img { border-radius: 8px; max-width: 100%; margin: 1em 0; }
+    .md-content table { border-collapse: collapse; width: 100%; margin: 1.5em 0; font-size: 0.9em; }
+    .md-content th, .md-content td { border: 1px solid rgba(0,0,0,0.1); padding: 0.75em; text-align: left; }
+    .md-content th { background: rgba(0,0,0,0.03); font-weight: 800; }
   </style>
 <script type="importmap">
 {
